--- a/index.html
+++ b/index.html
@@ -65,20 +65,14 @@
           <span class="pill">Sound Design</span>
         </div>
         <div class="socials">
-          <a href="https://github.com/" target="_blank" rel="noopener" class="social-link" aria-label="GitHub" title="GitHub">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 .5a12 12 0 0 0-3.79 23.4c.6.11.82-.26.82-.58v-2.03c-3.34.73-4.04-1.61-4.04-1.61-.55-1.4-1.33-1.77-1.33-1.77-1.09-.75.08-.73.08-.73 1.2.09 1.83 1.23 1.83 1.23 1.07 1.83 2.81 1.3 3.5.99.11-.78.42-1.3.76-1.6-2.66-.3-5.47-1.33-5.47-5.92 0-1.31.47-2.38 1.23-3.22-.12-.3-.53-1.52.12-3.17 0 0 1-.32 3.3 1.23a11.5 11.5 0 0 1 6 0c2.3-1.55 3.3-1.23 3.3-1.23.65 1.65.24 2.87.12 3.17.77.84 1.23 1.91 1.23 3.22 0 4.6-2.81 5.61-5.49 5.91.43.37.81 1.1.81 2.22v3.29c0 .32.21.7.82.58A12 12 0 0 0 12 .5Z"/></svg>
-          </a>
-          <a href="https://soundcloud.com/" target="_blank" rel="noopener" class="social-link" aria-label="SoundCloud" title="SoundCloud">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M17.7 9.1c-.5 0-.9.1-1.3.3-.6-2.3-2.7-4-5.2-4-2.4 0-4.4 1.6-5.1 3.8-.2-.1-.5-.1-.7-.1C3.1 9.1 1 11.2 1 13.7s2 4.6 4.4 4.6h12.3c2.3 0 4.3-1.9 4.3-4.3s-1.9-4.3-4.3-4.3z"/></svg>
-          </a>
-          <a href="mailto:hello@aury.dev" class="social-link" aria-label="Email" title="Email">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 4-8 5L4 8V6l8 5 8-5v2z"/></svg>
-          </a>
-          <a href="https://instagram.com/" target="_blank" rel="noopener" class="social-link" aria-label="Instagram" title="Instagram">
+          <a href="https://instagram.com/auritly" target="_blank" rel="noopener" class="social-link" aria-label="Instagram" title="Instagram">
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7zm5 3a6 6 0 1 1 0 12 6 6 0 0 1 0-12zm0 2.2A3.8 3.8 0 1 0 12 17.8 3.8 3.8 0 0 0 12 9.2zm6.6-2.1a1.1 1.1 0 1 1-2.2 0 1.1 1.1 0 0 1 2.2 0z"/></svg>
           </a>
-          <a href="https://x.com/" target="_blank" rel="noopener" class="social-link" aria-label="X" title="X (Twitter)">
-            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M18.244 2H21l-6.36 7.274L22 22h-5.78l-4.52-5.89L6.4 22H3.64l6.8-7.787L2 2h5.92l4.077 5.433L18.244 2Zm-2.02 18h1.12L8.02 4H6.82l9.404 16Z"/></svg>
+          <a href="https://github.com/willube" target="_blank" rel="noopener" class="social-link" aria-label="GitHub" title="GitHub">
+            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 .5a12 12 0 0 0-3.79 23.4c.6.11.82-.26.82-.58v-2.03c-3.34.73-4.04-1.61-4.04-1.61-.55-1.4-1.33-1.77-1.33-1.77-1.09-.75.08-.73.08-.73 1.2.09 1.83 1.23 1.83 1.23 1.07 1.83 2.81 1.3 3.5.99.11-.78.42-1.3.76-1.6-2.66-.3-5.47-1.33-5.47-5.92 0-1.31.47-2.38 1.23-3.22-.12-.3-.53-1.52.12-3.17 0 0 1-.32 3.3 1.23a11.5 11.5 0 0 1 6 0c2.3-1.55 3.3-1.23 3.3-1.23.65 1.65.24 2.87.12 3.17.77.84 1.23 1.91 1.23 3.22 0 4.6-2.81 5.61-5.49 5.91.43.37.81 1.1.81 2.22v3.29c0 .32.21.7.82.58A12 12 0 0 0 12 .5Z"/></svg>
+          </a>
+          <a href="https://discord.com/users/your-discord-id" target="_blank" rel="noopener" class="social-link" aria-label="Discord" title="Discord">
+            <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M20.317 4.3698a19.7913 19.7913 0 0 0-4.8851-1.5152.0741.0741 0 0 0-.0785.0371c-.211.3753-.4447.8648-.6083 1.2495-1.8447-.2762-3.68-.2762-5.4868 0-.1636-.3933-.4058-.8742-.6177-1.2495a.077.077 0 0 0-.0785-.0371c-1.4712.2492-3.251.8223-4.8852 1.5152a.0699.0699 0 0 0-.0321.0277C.5334 7.0452-.319 9.5799.0992 12.0578c.0017.0102.0071.0198.0152.0266 2.0528 1.5076 4.0413 2.4228 5.9929 3.0294a.0777.0777 0 0 0 .0842-.0276c.4616-.6304.8731-1.2952 1.226-1.9942a.076.076 0 0 0-.0416-.1057c-.6528-.2476-1.2743-.5495-1.8722-.8923a.077.077 0 0 1-.0076-.1277c.1258-.0943.2517-.1923.3718-.2914a.0743.0743 0 0 1 .0776-.0105c3.9278 1.7933 8.18 1.7933 12.0614 0a.0739.0739 0 0 1 .0785.0095c.1202.099.246.1981.3728.2924a.077.077 0 0 1-.0066.1276c-.598.3428-1.2205.6447-1.8733.8923a.0766.0766 0 0 0-.0406.1067c.3604.698.7719 1.3628 1.225 1.9932a.076.076 0 0 0 .0842.0286c1.961-.6067 3.9495-1.5219 6.0023-3.0294a.077.077 0 0 0 .0152-.0266c.5004-3.177-.8382-5.6736-2.5482-7.6601a.061.061 0 0 0-.0312-.0286ZM8.02 14.3312c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9555-2.4189 2.157-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.9555 2.4189-2.1569 2.4189Zm7.9748 0c-1.1825 0-2.1569-1.0857-2.1569-2.419 0-1.3332.9554-2.4189 2.1569-2.4189 1.2108 0 2.1757 1.0952 2.1568 2.419 0 1.3332-.946 2.4189-2.1568 2.4189Z"/></svg>
           </a>
         </div>
       </div>
