--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
 </head>
 <body>
   <a href="#main" class="skip-link">Skip to content</a>
+  <!-- Intro Splash -->
+  <div id="intro" class="intro-splash" aria-hidden="true">
+    <div class="intro-bg">
+      <div class="intro-glow"></div>
+      <div class="intro-rings"></div>
+    </div>
+    <h1 class="intro-word" aria-label="aury">
+      <span>a</span><span>u</span><span>r</span><span>y</span>
+    </h1>
+  </div>
   <div class="page-reveal" aria-hidden="true"></div>
   <div class="decor-layer">
     <div class="orb orb-a"></div>
