content: expand About + Skills with producer + systems focus; update typed phrases

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <p class="tag" aria-label="Roles">Developer · Music Producer</p>
   <p class="pitch">Crafting immersive web experiences & atmospheric sound. <span class="accent">FL Studio</span> & <span class="accent">Logic Pro</span> artisan blending code, rhythm, and texture.</p>
-  <p class="type-line" aria-live="polite">I build <span id="typed" class="typed" data-phrases='["web apps","beats","soundscapes","tools"]'></span></p>
+  <p class="type-line" aria-live="polite">I build <span id="typed" class="typed" data-phrases='["beats","vocal chains","web tools","anti-cheat"]'></span></p>
         <nav class="primary-nav" aria-label="Primary">
           <ul class="nav-list">
             <li><a href="#about">About</a></li>
@@ -92,26 +92,31 @@
     <main id="main" tabindex="-1">
       <section class="panel reveal" id="about">
         <h2 class="panel-title">About</h2>
-        <p>I'm obsessed with elegant systems and evocative sound palettes. I iterate fast, ship clean, and treat every project like a hybrid track: structure, groove, contrast, release.</p>
+        <p>I'm Aury — a teen producer/engineer and systems tinkerer. I split my time between building sound and building software. On the audio side I design vocal chains, sculpt beats, and dial in mixes that translate. On the tech side I like bending systems to my will, from custom macOS/Linux setups to small tools that automate the boring parts.</p>
+        <p>My toolkit spans <strong>FL Studio</strong> and friends — from <strong>UADx 1176</strong> dynamics and <strong>FabFilter Pro‑Q 3</strong> precision to <strong>Antares Mic Mod</strong> tone shaping. I'm also hands‑on with Hackintosh and dual‑boot builds, OS tuning, and scripting little helpers (Python visuals, Roblox scripting) — even security‑minded bits like token auth and lightweight anti‑cheat prototypes. Curious, methodical, a bit experimental — I like pairing creativity with clean, reliable execution.</p>
       </section>
       <section class="panel grid reveal" id="skills">
         <h2 class="panel-title">Core Stack</h2>
         <div class="cards">
           <div class="card">
-            <h3>Web Dev</h3>
-            <p>Semantic, accessible, performance‑minded interfaces with progressive enhancement.</p>
+            <h3>Music Production</h3>
+            <p>FL Studio workflow, vocal chain design, mix translation, mastering finish.</p>
           </div>
           <div class="card">
-            <h3>Production</h3>
-            <p>Beat sculpting, arrangement, mix translation, mastering polish.</p>
+            <h3>Audio Toolkit</h3>
+            <p>UADx 1176, FabFilter Pro‑Q 3, Antares Mic Mod; clean gain‑staging and routing.</p>
           </div>
           <div class="card">
-            <h3>Tools</h3>
-            <p>FL Studio, Logic Pro, custom scripts, sampler layering, granular textures.</p>
+            <h3>Systems & OS</h3>
+            <p>Hackintosh builds, dual‑boot setups, Linux/macOS tuning, performance optimization.</p>
           </div>
           <div class="card">
-            <h3>Sound Design</h3>
-            <p>Hybrid synthesis, cinematic atmospheres, transient shaping.</p>
+            <h3>Code & Automation</h3>
+            <p>Python scripts & animations, Roblox scripting, token auth, anti‑cheat prototypes.</p>
+          </div>
+          <div class="card">
+            <h3>Approach</h3>
+            <p>Curious, methodical, experimental, loyal — creativity paired with clear, reliable execution.</p>
           </div>
         </div>
       </section>
