feat: add Highlights section with project cards and nav link

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           <ul class="nav-list">
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
+            <li><a href="#highlights">Highlights</a></li>
           </ul>
         </nav>
         <div class="pill-row">
@@ -117,6 +118,32 @@
           <div class="card">
             <h3>Approach</h3>
             <p>Curious, methodical, experimental, loyal — creativity paired with clear, reliable execution.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="panel grid reveal" id="highlights">
+        <h2 class="panel-title">Highlights</h2>
+        <div class="cards">
+          <div class="card">
+            <h3>Vocal Chain Pack</h3>
+            <p>Custom chains with 1176 punch, Pro‑Q 3 tone shaping, and Mic Mod color — quick tracking to mix‑ready.</p>
+          </div>
+          <div class="card">
+            <h3>Anti‑Cheat Prototype</h3>
+            <p>Token‑based auth + behavioral checks for game scripts; lightweight, resilient, and easy to extend.</p>
+          </div>
+          <div class="card">
+            <h3>Hackintosh & Dual‑Boot</h3>
+            <p>Stable macOS/Linux builds with tuned EFI, working sleep/graphics, and low‑latency audio pipelines.</p>
+          </div>
+          <div class="card">
+            <h3>Python Audio Visuals</h3>
+            <p>Music‑reactive animation snippets for fast previews and content — simple, clean, and reusable.</p>
+          </div>
+          <div class="card">
+            <h3>Web Tools</h3>
+            <p>Small utilities that speed up workflow: sample tagging, batch conversion, routing helpers.</p>
           </div>
         </div>
       </section>
