--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
     <main id="main" tabindex="-1">
       <section class="panel reveal" id="about">
         <h2 class="panel-title">About</h2>
-        <p>I'm Aury — a teen producer/engineer and systems tinkerer. I split my time between building sound and building software. On the audio side I design vocal chains, sculpt beats, and dial in mixes that translate. On the tech side I like bending systems to my will, from custom macOS/Linux setups to small tools that automate the boring parts.</p>
-        <p>My toolkit spans <strong>FL Studio</strong> and friends — from <strong>UADx 1176</strong> dynamics and <strong>FabFilter Pro‑Q 3</strong> precision to <strong>Antares Mic Mod</strong> tone shaping. I'm also hands‑on with Hackintosh and dual‑boot builds, OS tuning, and scripting little helpers (Python visuals, Roblox scripting) — even security‑minded bits like token auth and lightweight anti‑cheat prototypes. Curious, methodical, a bit experimental — I like pairing creativity with clean, reliable execution.</p>
+  <p>Producer and systems tinkerer — FL Studio vocal chains & beats, small tools, and tuned macOS/Linux. Creativity × clean execution.</p>
       </section>
       <section class="panel grid reveal" id="skills">
         <h2 class="panel-title">Core Stack</h2>
