--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#highlights">Highlights</a></li>
+            <li><a href="#music">Music</a></li>
           </ul>
         </nav>
         <div class="pill-row">
@@ -145,6 +146,15 @@
             <p>Small utilities that speed up workflow: sample tagging, batch conversion, routing helpers.</p>
           </div>
         </div>
+      </section>
+
+      <section class="panel reveal" id="music">
+        <h2 class="panel-title">Music</h2>
+        <p>Now playing — one of my current favorites:</p>
+        <div class="embed-box" aria-label="Spotify player">
+          <iframe class="spotify-embed" title="Spotify track player" src="https://open.spotify.com/embed/track/1MT8CFXDv7qq0bf0sUpire?utm_source=generator&theme=0" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
+        <p style="margin-top:.8rem; font-size:.85rem; color:#9b93aa;">Tip: hit play — login may be required by Spotify.</p>
       </section>
       
     </main>
