perf: replace Spotify embed with lazy YouTube embed (click-to-play)

--- a/index.html
+++ b/index.html
@@ -150,11 +150,8 @@
 
       <section class="panel reveal" id="music">
         <h2 class="panel-title">Music</h2>
-        <p>Now playing — one of my current favorites:</p>
-        <div class="embed-box" aria-label="Spotify player">
-          <iframe class="spotify-embed" title="Spotify track player" src="https://open.spotify.com/embed/track/1MT8CFXDv7qq0bf0sUpire?utm_source=generator&theme=0" width="100%" height="152" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        </div>
-        <p style="margin-top:.8rem; font-size:.85rem; color:#9b93aa;">Tip: hit play — login may be required by Spotify.</p>
+        <p>Now playing — quick, lightweight YouTube embed:</p>
+        <div class="embed-box video" data-yt-id="_wvyJJK5OOA" data-yt-list="RD_wvyJJK5OOA" aria-label="YouTube player placeholder"></div>
       </section>
       
     </main>
