--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <p>Now playing — quick, lightweight YouTube embed:</p>
         <div class="embed-box video" data-yt-id="_wvyJJK5OOA" data-yt-list="RD_wvyJJK5OOA" aria-label="YouTube player placeholder"></div>
         <div class="player-controls" aria-label="Player controls">
-          <button type="button" class="ctrl-btn" data-action="stop" aria-label="Stop playback">Stop</button>
+          <button type="button" class="ctrl-btn" data-action="toggle" aria-label="Pause or play">Pause</button>
           <label class="volume">
             <span>Volume</span>
             <input type="range" min="0" max="100" step="1" value="80" data-volume aria-label="Volume" />
