feat: add Droiver.cc section with waitlist form and nav link (DE)

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#highlights">Highlights</a></li>
+            <li><a href="#droiver">Droiver.cc</a></li>
           </ul>
         </nav>
         <div class="pill-row">
@@ -145,6 +146,29 @@
             <p>Small utilities that speed up workflow: sample tagging, batch conversion, routing helpers.</p>
           </div>
         </div>
+      </section>
+
+      <section class="panel reveal" id="droiver">
+        <h2 class="panel-title">Droiver.cc</h2>
+        <p><strong>CS2 FPS Booster</strong> — schlank, sicher, effektiv. Optimiert Grafik‑/System‑Settings für stabile Frames und geringere Latenz. Release: bald.</p>
+        <div class="pill-row" style="margin-top:.8rem">
+          <span class="pill">+FPS Presets</span>
+          <span class="pill">Auto‑Config (cfg)</span>
+          <span class="pill">Low‑Latency Tweaks</span>
+          <span class="pill">Reversibel</span>
+          <span class="pill">One‑Click Apply</span>
+        </div>
+        <form id="droiverForm" class="form-grid" autocomplete="off" action="https://formsubmit.co/aurischlauch@gmail.com" method="POST">
+          <input type="hidden" name="_subject" value="Droiver.cc Waitlist" />
+          <input type="hidden" name="_template" value="table" />
+          <input type="hidden" name="_captcha" value="false" />
+          <input type="hidden" name="_next" value="thanks.html" />
+          <label class="field field-full">
+            <span>Warteliste</span>
+            <input type="email" name="email" required class="fx-input" placeholder="you@example.com" />
+          </label>
+          <button type="submit" class="fx-btn" data-tilt>Benachrichtige mich</button>
+        </form>
       </section>
       
     </main>
