i18n: translate Droiver.cc section and waitlist to English

--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
 
       <section class="panel reveal" id="droiver">
         <h2 class="panel-title">Droiver.cc</h2>
-        <p><strong>CS2 FPS Booster</strong> — schlank, sicher, effektiv. Optimiert Grafik‑/System‑Settings für stabile Frames und geringere Latenz. Release: bald.</p>
+        <p><strong>CS2 FPS Booster</strong> — lightweight, safe, effective. Tunes graphics/system settings for stable frames and lower latency. Release: soon.</p>
         <div class="pill-row" style="margin-top:.8rem">
           <span class="pill">+FPS Presets</span>
           <span class="pill">Auto‑Config (cfg)</span>
           <span class="pill">Low‑Latency Tweaks</span>
-          <span class="pill">Reversibel</span>
+          <span class="pill">Reversible</span>
           <span class="pill">One‑Click Apply</span>
         </div>
         <form id="droiverForm" class="form-grid" autocomplete="off" action="https://formsubmit.co/aurischlauch@gmail.com" method="POST">
@@ -164,10 +164,10 @@
           <input type="hidden" name="_captcha" value="false" />
           <input type="hidden" name="_next" value="thanks.html" />
           <label class="field field-full">
-            <span>Warteliste</span>
+            <span>Waitlist</span>
             <input type="email" name="email" required class="fx-input" placeholder="you@example.com" />
           </label>
-          <button type="submit" class="fx-btn" data-tilt>Benachrichtige mich</button>
+          <button type="submit" class="fx-btn" data-tilt>Notify me</button>
         </form>
       </section>
       
