--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </div>
           <div class="card">
             <h3>Code & Automation</h3>
-            <p>Python scripts & animations, Roblox scripting, token auth, anti‑cheat prototypes.</p>
+            <p>Python scripts & animations, token auth, anti‑cheat prototypes.</p>
           </div>
           <div class="card">
             <h3>Approach</h3>
@@ -150,13 +150,12 @@
 
       <section class="panel reveal" id="droiver">
         <h2 class="panel-title">Droiver.cc</h2>
-        <p><strong>CS2 FPS Booster</strong> — lightweight, safe, effective. Tunes graphics/system settings for stable frames and lower latency. Release: soon.</p>
+        <p><strong>CS2 EXTERNAL</strong> — lightweight, safe, effective. Release: soon.</p>
         <div class="pill-row" style="margin-top:.8rem">
-          <span class="pill">+FPS Presets</span>
-          <span class="pill">Auto‑Config (cfg)</span>
-          <span class="pill">Low‑Latency Tweaks</span>
+          <span class="pill">Aimbot</span>
+          <span class="pill">ESP (cfg)</span>
+          <span class="pill">EXTERNAL</span>
           <span class="pill">Reversible</span>
-          <span class="pill">One‑Click Apply</span>
         </div>
         <form id="droiverForm" class="form-grid" autocomplete="off" action="https://formsubmit.co/aurischlauch@gmail.com" method="POST">
           <input type="hidden" name="_subject" value="Droiver.cc Waitlist" />
