--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WorkSphere – Jobplattform für Talente & Unternehmen</title>
+  <title>JobUs – Jobplattform für Talente & Unternehmen</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -51,10 +51,10 @@
       <div class="container hero__grid">
         <div>
           <p class="badge">Neue Chancen für Talente & Teams</p>
-          <h1 class="hero__headline">Finde die Stelle, die wirklich zu dir passt – oder entdecke dein perfektes Team.</h1>
-          <p class="hero__copy">WorkSphere verbindet Arbeitssuchende mit Unternehmen durch intelligente Matches, KI-gestützte Bewerbungen und transparente Profile.</p>
+          <h1 class="hero__headline">Finde die Talente, die wirklich zu deinem Team passen.</h1>
+          <p class="hero__copy">WorkSphere unterstützt Recruiting-Teams mit KI-gestützter Kandidatensuche, kuratierten Talentpools und klaren Insights für schnellere Einstellungen.</p>
           <div class="hero__cta-group">
-            <a class="btn btn-primary" href="./auth.html#signup">Profil erstellen</a>
+            <a class="btn btn-primary" href="./auth.html#signup">Unternehmen registrieren</a>
             <a class="btn btn-secondary" href="#features">Mehr erfahren</a>
           </div>
           <div class="hero__stats">
