index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="navbar">
         <a class="navbar__brand" href="/">
           <span class="badge"><i class="fa-solid fa-briefcase"></i></span>
-          WorkSphere
+          JubUs
         </a>
         <button class="mobile-menu-toggle" aria-expanded="false" aria-controls="mobile-nav">
           <span class="visually-hidden">Menü öffnen</span>
