--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Auri | Entwickler & Musikproduzent</title>
     <meta name="description" content="Portfolio von Auri – Webdeveloper, Music Producer und Security-Enthusiast." />
     <meta name="keywords" content="Portfolio, Webdeveloper, Music Producer, Auri, React, Tailwind, Roblox, Security" />
-    <meta name="author" content="GitHub Copilot" />
+    <meta name="author" content="Aury" />
   <meta name="theme-color" content="#050810" />
 
     <meta property="og:title" content="Auri | Entwickler & Musikproduzent" />
