--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Auri | Entwickler & Musikproduzent</title>
+    <title>Aury | Entwickler & Musikproduzent</title>
     <meta name="description" content="Portfolio von Auri – Webdeveloper, Music Producer und Security-Enthusiast." />
     <meta name="keywords" content="Portfolio, Webdeveloper, Music Producer, Auri, React, Tailwind, Roblox, Security" />
     <meta name="author" content="Aury" />
